--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -79,6 +79,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.felipe</groupId>
+			<artifactId>registration</artifactId>
+			<version>registration-login</version>
+		</dependency>
 	</dependencies>
 
 	<build>
