--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ViajaFacil
 
 spring.datasource.url=jdbc:mysql://localhost:3306/login_system
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=licha1234
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
